--- a/arbitrumConfig.toml
+++ b/arbitrumConfig.toml
@@ -38,7 +38,7 @@
 #   - DefaultBootstrappeers = ['$P2P_PEER_ID@$BOOTSTRAP_00_DNS:$PORT $P2P_PEER_ID@$BOOTSTRAP_01_DNS:$PORT']
 #
 # - [[EVM]]
-#  - Configured for Ethereum Mainnet.
+#  - Configured for Arbitrum Mainnet.
 #  - If you're on a different network, be sure to update these values
 #   - ChainID = '42161'
 #   - LinkContractAddress = '0xf97f4df75117a78c1A5a0DBb814Af92458539FB4'
