--- a/binancesmartchainConfig.toml
+++ b/binancesmartchainConfig.toml
@@ -54,7 +54,7 @@
 #---------------------------#
 # ExplorerURL
 # - ExplorerURL is the websocket URL for the node to push stats to.
-ExplorerURL = 'wss://arb-mainnet-origin.explorer.chain.link'
+ExplorerURL = 'wss://'
 
 # InsecureFastScrypt
 # - ADVANCED: Do not change this setting unless you know what you are doing.
