--- a/secrets.toml
+++ b/secrets.toml
@@ -45,33 +45,33 @@ Keystore = ""
 # - VRF is the password for the vrf keys.
 # - Example: Environment variable: `CL_PASSWORD_VRF`
 # - Example: VRF = "VRF_pass"
-VRF = ""
+#VRF = ""
 
 #---------------------------#
 #        Pyroscope          #
 #---------------------------#
 
-[Pyroscope]
+#[Pyroscope]
 # Environment variable: `CL_PYROSCOPE_AUTH_TOKEN`
 # - AuthToken is the API key for the Pyroscope server.
 # - Example: AuthToken = "pyroscope-token"
-AuthToken = ""
+#AuthToken = ""
 
 # Mercury credentials are needed if running OCR2 jobs in mercury mode. 0 or
 # more Mercury credentials may be specified. URLs must be unique.
 #---------------------------#
 #         Mercury           #
 #---------------------------#
-[Mercury]
-[[Mercury.Credentials]]
+#[Mercury]
+#[[Mercury.Credentials]]
 # - URL is the URL of the mercury endpoint
 # - Example: URL = "http://example.com/reports"
-URL = "http://example.com/reports"
+#URL = "http://example.com/reports"
 
 # - Username is used for basic auth with the mercury endpoint
 # - Example: Username = "exampleusername"
-Username = "exampleusername"
+#Username = "exampleusername"
 
 # - Password is used for basic auth with the mercury endpoint
 # - Example: Password = "examplepassword"
-Password = ""
+#Password = ""
