--- a/avalancheConfig.toml
+++ b/avalancheConfig.toml
@@ -1464,7 +1464,7 @@ MinIncomingConfirmations = 1
 #---------------------------#
 #      EVM Gas Estimator    #
 #---------------------------#
-#[EVM.GasEstimator]
+[EVM.GasEstimator]
 
 # Mode
 # - Mode controls what type of gas estimator is used.
